# ORTrack_trt

./: CMakeLists.txt  README.md  main_trt.cpp  ortrack_trt.cpp  ortrack_trt.h
ORTrack_pyonnx/: or_tracker_ort.py
ORTrack_pytrt/: convert_model_trt.sh  onnx2trt.py  ortrack_nvinfer.py  ortracker_trt.py
